--- a/Deblua_Din.mw
+++ b/Deblua_Din.mw
@@ -2,14 +2,22 @@
 | изображение = Dean DeBlois(Wiki).jpg
 | описание изображения = Din Deblua [[Reikjavik]]as, vn 2010 tal'vku
 }}
-'''Din Deblua''' ([[anglijan kel'|angl]]. da [[francijan kel'|franc]].: ''Dean DeBlois''; sünd. [[7. kezaku]] [[1970]], [[Eilmer (Kvebek)]], [[Kanad]]) om kanadalaine kinotarinantegii da režissör.
+'''Din Deblua''' ([[anglijan kel'|angl]]. i {{lang-fr|Dean DeBlois}}; sünd. [[7. kezaku]] [[1970]], [[Eilmer (Kvebek)]], [[Kanad]]) om kanadine scenarist da režissör [[animacii|animacijan]] sferas.
+
+== Fil'mografii režissöraks ==
+* 2002 — «Lilo i Stič» ({{lang-en|Lilo & Stitch}})
+* 2003 — «Lilo i Stič 3» (video, ''Lilo & Stitch's Island of Adventures'')
+* 2007 — «Heima»
+* 2010 — «Kut kodikoitta drakonad» (''How to Train Your Dragon'')
+* 2014 — «Kut kodikoitta drakonad 2» (''How to Train Your Dragon 2'')
+* 2019 — «Kut kodikoitta drakonad 3» (''How to Train Your Dragon 3'')
 
 == Homaičendad ==
 <references/>
 
 {{stub}}
 [[Kategorii:Kanadan režissörad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Scenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Kanadha]]
