--- a/Deblua_Din.mw
+++ b/Deblua_Din.mw
@@ -4,13 +4,15 @@
 }}
 '''Din Deblua''' ([[anglijan kel'|angl]]. i {{lang-fr|Dean DeBlois}}; sünd. [[7. kezaku]] [[1970]], [[Eilmer (Kvebek)]], [[Kanad]]) om kanadine scenarist da režissör [[animacii|animacijan]] sferas.
 
+Mez' zavodi kar'jerad vl 1998 i sai animacijan [[Enni (premii)|Enni]]-premijan kaks' arvlahjad sen voden täuz'piduzližen «Mulan»-mul'tfil'man rados scenaristaks.
+
 == Fil'mografii režissöraks ==
-* 2002 — «Lilo i Stič» ({{lang-en|Lilo & Stitch}})
+* 2002 — «Lilo i Stič» (mugažo scenarist, {{lang-en|Lilo & Stitch}})
 * 2003 — «Lilo i Stič 3» (video, ''Lilo & Stitch's Island of Adventures'')
 * 2007 — «Heima»
-* 2010 — «Kut kodikoitta drakonad» (''How to Train Your Dragon'')
+* 2010 — «Kut kodikoitta drakonad» (mugažo scenarist, ''How to Train Your Dragon'')
 * 2014 — «Kut kodikoitta drakonad 2» (''How to Train Your Dragon 2'')
-* 2019 — «Kut kodikoitta drakonad 3» (''How to Train Your Dragon 3'')
+* 2019 — «Kut kodikoitta drakonad 3» (mugažo scenarist, ''How to Train Your Dragon 3'')
 
 == Homaičendad ==
 <references/>
