*Empty MediaWiki Message*

--- a/Balabanov_Aleksei.mw
+++ b/Balabanov_Aleksei.mw
@@ -5,9 +5,9 @@
 '''Aleksei Oktäbrinovič Balabanov''' ({{lang-ru|Алексей Октябринович Балабанов}}; sünd. [[25. uhoku]] [[1959]], [[Jekaterinburg|Sverdlovsk]], [[Sverdlovskan agj]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[18. semendku]] [[2013]], [[Solnečnoje (Piter)|Solnečnoje]], [[Sestroreck]], [[Piter]], [[Venäma]]) oli nevondkundaline i [[Venäma|venämalaine]] režissör, scenarist da prodüser.
 
 == Biografii ==
-Aleksei Balabanov oli sündnu Sverdlovsk-lidnha, sen školan vn 1976 pästnik. Openui [[Alauz'lidn|Gor'kii-lidnan]] pedagogižes institutas, pästihe sišpäi keliden kändajaks. Služi armijas vozil 1981—1983, ezmäi sodatransportaviacijan oficeraks (lendeli Azijan i Afrikan maihe), ühtni [[Afganistan]]an sodaha, lopi službad sodamerilaivištos. Vl 1990 openzihe kändmaha režissöraks Üläkursil [[Moskv]]-lidnas.
+Aleksei Balabanov oli sündnu Sverdlovsk-lidnha, sen školan vn 1976 pästnik. Openui [[Alauz'lidn|Gor'kii-lidnan]] pedagogižes institutas, pästihe sišpäi keliden kändajaks. Mez' služi armijas vozil 1981−1983, ezmäi sodatransportaviacijan oficeraks (lendeli Azijan i Afrikan maihe), ühtni [[Afganistan]]an sodaha, lopi službad sodamerilaivištos. Vl 1990 openzihe kändmaha režissöraks Üläkursil [[Moskv]]-lidnas.
 
-Oli naižiš kaks' kerdad, akad — Irina, Nadežda. Kaks' poigad: Födor ühtendes naimiželospäi, i Petr-poig (sünd. 1995) om kahtendes naindaspäi.
+Balabanov oli naižiš kaks' kerdad, akad — Irina, Nadežda. Kaks' poigad: Födor ühtendes naimiželospäi, i Petr-poig (sünd. 1995) om kahtendes naindaspäi.
 
 == Fil'mad (režissöraks) ==
 * 1991 — ''[[Ozakahad päiväd]]'' (Счастливые дни)
@@ -34,7 +34,7 @@ Oli naižiš kaks' kerdad, akad — Irina, Nadežda. Kaks' poigad: Födor ühten
 
 [[Kategorii:NSTÜ:n režissörad]]
 [[Kategorii:Venäman režissörad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Scenaristad]]
 [[Kategorii:Venäman prodüserad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
