--- a/Barto_Agnija.mw
+++ b/Barto_Agnija.mw
@@ -1,6 +1,6 @@
 {{Personalii}}
 [[Fail:Barto toys.jpg|thumb|left|250px|Vn 1936 «Igruški»-kirjan kor' (''Bobaižed'', pirdi K. Kuznecov)]]
-'''Agnija L'vovna Barto''' ({{lang-ru|Агния Львовна Барто}}), todesine nimi — '''Gitel' Leibovna Volova''' (ven.: ''Гитель Лейбовна Волова''; sünd. [[4. uhoku]] [[1906]], [[Kaunas|Kovno]], [[Venäman imperii]] — kol. [[1. sulaku]] [[1981]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]), oli tetab nevondkundaline lapsenrunokirjutai, radiovedai da kinotarinantegii.
+'''Agnija L'vovna Barto''' ({{lang-ru|Агния Львовна Барто}}), todesine nimi — '''Gitel' Leibovna Volova''' (ven.: ''Гитель Лейбовна Волова''; sünd. [[4. uhoku]] [[1906]], [[Kaunas|Kovno]], [[Venäman imperii]] — kol. [[1. sulaku]] [[1981]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]), oli tetab nevondkundaline lapsenrunokirjutai, radiovedai da kinoscenarist.
 
 Kirjutajan runoiden tobj pala om sätud peniden lapsiden täht. Om kebn lugeda i panda muštho Barton runoid. Tegii kosketi lapsidenke oikti, kesknikoita, koveritomal kelel lirižita ümbrikirjutandoita da lähtendoita polihe. Kaik personažad runoiš nimitasoiš nimen mödhe.
 
@@ -9,7 +9,7 @@ Kirjutajan runoiden tobj pala om sätud peniden lapsiden täht. Om kebn lugeda i
 
 {{stub}}
 [[Kategorii:NSTÜ:n runokirjutajad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Scenaristad]]
 [[Kategorii:Radiovedajad]]
 [[Kategorii:Runokirjutajad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
