--- a/Barto_Agnija.mw
+++ b/Barto_Agnija.mw
@@ -1,8 +1,8 @@
 {{Personalii}}
 [[Fail:Barto toys.jpg|thumb|left|250px|Vn 1936 «Igruški»-kirjan kor' (''Bobaižed'', pirdi K. Kuznecov)]]
-'''Agnija L'vovna Barto''' ({{lang-ru|Агния Львовна Барто}}), todesine nimi — '''Gitel' Leibovna Volova''' (ven.: ''Гитель Лейбовна Волова''; sünd. [[4. uhoku]] [[1906]], [[Kaunas|Kovno]], [[Venäman imperii]] — kol. [[1. sulaku]] [[1981]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]), oli tetab nevondkundaline lapsenrunokirjutai, radiovedai da kinoscenarist.
+'''Agnija L'vovna Barto''' ({{lang-ru|Агния Львовна Барто}}), nimi sündundan jäl'ghe — '''Gitel' Leibovna Volova''' (ven.: ''Гитель Лейбовна Волова''; sünd. [[4. uhoku]] [[1906]], [[Kaunas|Kovno]], [[Venäman imperii]] — kol. [[1. sulaku]] [[1981]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]), oli tetab nevondkundaline lapsenrunokirjutai, radiovedai da kinoscenarist. Stalinan premijan (1950, kahtenz' märpord) i Leninan premijan (1972) laureat.
 
-Kirjutajan runoiden tobj pala om sätud peniden lapsiden täht. Om kebn lugeda i panda muštho Barton runoid. Tegii kosketi lapsidenke oikti, kesknikoita, koveritomal kelel lirižita ümbrikirjutandoita da lähtendoita polihe. Kaik personažad runoiš nimitasoiš nimen mödhe.
+Kirjutajan runoiden tobj pala om sätud peniden lapsiden täht. Om kebn lugeda i panda muštho Barton runoid. Tegii kosketab lapsidenke oikti, kesknikoita, koveritomal kelel lirižita ümbrikirjutandoita da lähtendoita polihe. Kaik personažad runoiš nimitasoiš nimen mödhe.
 
 == Homaičendad ==
 <references/>
