--- a/Bergman_Ingmar.mw
+++ b/Bergman_Ingmar.mw
@@ -3,7 +3,7 @@
 | изображение = Ingmar Bergman (1966).jpg
 | описание изображения = Ingmar Bergman vn 1966 redukus
 }}
-'''Ernst Ingmar Bergman''' (mugažo [[ročin kel'|ročin kelel]], virktas [ˈɪŋmar ˈbærjman]; sünd. [[14. heinku]] [[1918]], [[Uppsal]], [[Ročinma]] — kol. [[30. heinku]] [[2007]], Forö-sar' [[Gotland]]-sarenno, Ročinma) — oli ročilaine teatran, fil'miden i teleradion režissör, kinostarinoiden i p'jesiden kirjutai. Sai «[[Oskar (kinopremii)|Oskar]]»-premijad vll 1961, 1962 i 1984 parahimas verazmaižes fil'mas, da anttihe Bergmanale äjid toižid arvlahjoid hänen kinoradmižes.
+'''Ernst Ingmar Bergman''' (mugažo [[ročin kel'|ročin kelel]], virktas [ˈɪŋmar ˈbærjman]; sünd. [[14. heinku]] [[1918]], [[Uppsal]], [[Ročinma]] — kol. [[30. heinku]] [[2007]], Forö-sar' [[Gotland]]-sarenno, Ročinma) — oli ročine teatran, fil'miden i teleradion režissör, kinoscenarijoiden i p'jesiden kirjutai. Sai «[[Oskar (kinopremii)|Oskar]]»-premijad vll 1961, 1962 i 1984 parahimas verazmaižes fil'mas, da anttihe Bergmanale äjid toižid arvlahjoid hänen kinoradmižes.
 
 == Biografii ==
 Ingmar oli sündnu lüteranižen Erik Bergman-pastoran i Karin Bergman-medsizaren (neiččel Okerblum) pereheze. Prihal oli Dag-veik i Margareta-sizar. Nor' Ingmar tegi navedijan mul'tfil'mid i oli otnus tätüteatran dekoracijoihe opeten gimnazijas sil-žo aigal. Vl 1937 Bergman ühtni Stokhol'man universitetižhe kolledžha (nüg. [[Stokhol'man universitet]]), no taci opendust teatrha näht.
@@ -31,7 +31,7 @@ Režissör oli naižiš viž kerdad, ühesa last sünduihe naimiželoiš. Lapsed
 
 {{stub}}
 [[Kategorii:Ročinman režissörad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Scenaristad]]
 [[Kategorii:Ročinman kirjutajad]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
