--- a/Dahno_Vladimir.mw
+++ b/Dahno_Vladimir.mw
@@ -1,5 +1,5 @@
 {{Personalii}}
-'''Vladimir Avksent'jevič Dahno''' ({{lang-uk|Володимир Авксентійович Дахно}}, {{lang-ru|Владимир Авксентьевич Дахно}}; sünd. [[7. keväz'ku]] [[1932]], [[Zaporož'je]], [[Ukrain|Ukrainan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[28. heinku]] [[2006]], [[Kijev]], [[Ukrain]]) oli tetab nevondkundaline da ukrainine mul'tiplikator, režissör da kinoscenarist. Sädi mul'tfil'mid (enamb 20), sidä kesken tetaban «[[Kozakad (mul'tserial)|Kozakad]]»-mul'tserialan tegii. Ukrainan rahvahan artist (1996).
+'''Vladimir Avksent'jevič Dahno''' ({{lang-uk|Володимир Авксентійович Дахно}}, {{lang-ru|Владимир Авксентьевич Дахно}}; sünd. [[7. keväz'ku]] [[1932]], [[Zaporož'je]], [[Ukrain|Ukrainan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[28. heinku]] [[2006]], [[Kijev]], [[Ukrain]]) oli tetab nevondkundaline da ukrainine mul'tiplikator, kinorežissör da scenarist. Sädi mul'tfil'mid (enamb 20), sidä kesken tetaban «[[Kozakad (mul'tserial)|Kozakad]]»-mul'tserialan tegii. Ukrainan rahvahan artist (1996).
 
 == Biografii ==
 Školan jäl'ghe priha tuli openumha Kijevan medicinižes institutas, no läz kerdalaz tegi sirdmižen i zavodi opendust Kijevan inženeriž-sauvondan institutas. Pästnus sišpäi vl 1955 i radoi Kijevas arhitektoraks. Dahnon dissertacijan originaline projekt vedi tetabiden M.A. Draicun- i D.J. Čerkasskii-mul'tiplikatoriden tarkust, i hö taričiba hänele paukradod mul'tlikacijan fil'miden udes «Kijevnaučfil'm»-sädamižühtelmases.
@@ -13,7 +13,7 @@ Vl 1960 V. Dahno debütirui pirdajaks-mul'tiplikatoraks «Percan ozaitelemine»-
 [[Kategorii:Mul'tiplikatorad]]
 [[Kategorii:NSTÜ:n režissörad]]
 [[Kategorii:Ukrainan režissörad]]
-[[Kategorii:Kinoscenaristad]]
+[[Kategorii:Scenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Zaporož'jehe]]
