--- a/Fellini_Federiko.mw
+++ b/Fellini_Federiko.mw
@@ -33,7 +33,7 @@ Federiko Fellini oli kaikiden alemba kirjutadud fil'miden režissöraks da scena
 
 {{stub}}
 [[Kategorii:Italijan režissörad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Riminihe]]
