--- a/Balabanov_Aleksei.mw
+++ b/Balabanov_Aleksei.mw
@@ -34,7 +34,7 @@ Balabanov oli naižiš kaks' kerdad, akad — Irina, Nadežda. Kaks' poigad: Fö
 
 [[Kategorii:NSTÜ:n režissörad]]
 [[Kategorii:Venäman režissörad]]
-[[Kategorii:Scenaristad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Venäman prodüserad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
