--- a/Adams_Duglas.mw
+++ b/Adams_Duglas.mw
@@ -21,6 +21,7 @@ Kirjutai sädi kirjserijan Dirk Džentliš mugažo (koume romanad: 1987, 1988, 2
 [[Kategorii:Dramaturgad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Surhe Britanijha]]
 [[Kategorii:Sündnuded Kembridžha]]
