--- a/Balabanov_Aleksei.mw
+++ b/Balabanov_Aleksei.mw
@@ -38,5 +38,6 @@ Balabanov oli naižiš kaks' kerdad, akad — Irina, Nadežda. Kaks' poigad: Fö
 [[Kategorii:Venäman prodüserad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Jekaterinburgha]]
