--- a/Fellini_Federiko.mw
+++ b/Fellini_Federiko.mw
@@ -35,5 +35,6 @@ Federiko Fellini oli kaikiden alemba kirjutadud fil'miden režissöraks da scena
 [[Kategorii:Italijan režissörad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Riminihe]]
