--- a/Barto_Agnija.mw
+++ b/Barto_Agnija.mw
@@ -9,7 +9,8 @@ Kirjutajan runoiden tobj pala om sätud peniden lapsiden täht. Om kebn lugeda i
 
 {{stub}}
 [[Kategorii:NSTÜ:n runokirjutajad]]
-[[Kategorii:Scenaristad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Radiovedajad]]
 [[Kategorii:Runokirjutajad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
