--- a/Bergman_Ingmar.mw
+++ b/Bergman_Ingmar.mw
@@ -31,9 +31,10 @@ Režissör oli naižiš viž kerdad, ühesa last sünduihe naimiželoiš. Lapsed
 
 {{stub}}
 [[Kategorii:Ročinman režissörad]]
-[[Kategorii:Scenaristad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Ročinman kirjutajad]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Uppsalha]]
