--- a/Dahno_Vladimir.mw
+++ b/Dahno_Vladimir.mw
@@ -15,6 +15,7 @@ Vl 1960 V. Dahno debütirui pirdajaks-mul'tiplikatoraks «Percan ozaitelemine»-
 [[Kategorii:Ukrainan režissörad]]
 [[Kategorii:Scenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Zaporož'jehe]]
 [[Kategorii:Kolnuded Kijevas]]
