--- a/Deblua_Din.mw
+++ b/Deblua_Din.mw
@@ -21,6 +21,7 @@ Mez' zavodi kar'jerad vl 1998 i sai animacijan [[Enni (premii)|Enni]]-premijan k
 [[Kategorii:Kanadan režissörad]]
 [[Kategorii:Scenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Kanadha]]
 [[Kategorii:Sündnuded Kvebekha]]
