--- a/Deblua_Din.mw
+++ b/Deblua_Din.mw
@@ -19,7 +19,7 @@ Mez' zavodi kar'jerad vl 1998 i sai animacijan [[Enni (premii)|Enni]]-premijan k
 
 {{stub}}
 [[Kategorii:Kanadan režissörad]]
-[[Kategorii:Scenaristad]]
+[[Kategorii:Animacijan scenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
