--- a/Dahno_Vladimir.mw
+++ b/Dahno_Vladimir.mw
@@ -13,7 +13,7 @@ Vl 1960 V. Dahno debütirui pirdajaks-mul'tiplikatoraks «Percan ozaitelemine»-
 [[Kategorii:Mul'tiplikatorad]]
 [[Kategorii:NSTÜ:n režissörad]]
 [[Kategorii:Ukrainan režissörad]]
-[[Kategorii:Scenaristad]]
+[[Kategorii:Animacijan scenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
