--- a/Hičkok_Al'fred.mw
+++ b/Hičkok_Al'fred.mw
@@ -1,9 +1,9 @@
 {{1000}}{{A10000}}
 {{Personalii
 | изображение = Hitchcock, Alfred 02.jpg
-| описание изображения = Al'fred Hičkok edel 1963 vot
+| описание изображения = Al'fred Hičkok edel 1963. vot
 }}
-'''Al'fred Džozef Hičkok'''-ižand ({{lang-en|Sir Alfred Joseph Hitchcock}}; sünd. 13. eloku 1899, [[Leitonstoun]], Sur' [[London]], [[Anglii]], [[Sur' Britanii]] — kol. 29. sulaku 1980, [[Bel' Eir]], [[Los Andželes]], [[Kalifornii]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) oli britanijalaine da amerikalaine fil'miden režissör, prodüser, scenarist.
+'''Al'fred Džozef Hičkok'''-ižand ({{lang-en|Sir Alfred Joseph Hitchcock}}; sünd. 13. eloku 1899, [[Leitonstoun]], Sur' [[London]], [[Anglii]], [[Sur' Britanii]] — kol. 29. sulaku 1980, [[Bel' Eir]], [[Los Andželes]], [[Kalifornii]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) oli britanine da amerikaine fil'miden režissör, prodüser, scenarist.
 
 Kinon režissöran sädamine om sidotud «[[triller]]»-žanrha (angl. ''thrill''-sanaspäi — «säru») da «saspens»-tärtushe (angl. ''suspense'' — «kingitez»). Mahtoi säta holdujan märhapanmatomuden da kingitadud varastusen atmosferad ičeze fil'miš. Sädandan aigas fil'mzi 55 kinofil'mad da 17 fil'mad «Al'fred Hičkok ezitab»-TV-serijha. Erašti ozutihe fil'miš [[kameo]]-roliš.
 
@@ -37,9 +37,10 @@ Vspäi 1926 oli nainu, eli Al'ma Revil'-akanke surmhasai. Üks'jäine laps' Patr
 [[Kategorii:Suren Britanijan režissörad]]
 [[Kategorii:AÜV:oiden prodüserad]]
 [[Kategorii:AÜV:oiden režissörad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Londonha]]
 [[Kategorii:Kolnuded Los Andželesas]]
