--- a/Jufit_Jevgenii.mw
+++ b/Jufit_Jevgenii.mw
@@ -1,7 +1,7 @@
 {{Personalii}}
 '''Jevgenii Georgijevič Jufit''' ({{lang-ru|Евгений Георгиевич Юфит}}; sünd. [[17. uhoku]] [[1961]], [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. 13. tal'vku 2016, [[Petergof]], [[Piter]], [[Venäma]]) oli [[Venäma|venämalaine]] kinorežissör-eksperimentator, scenarist, pirdai-[[nekrorealizm|nekrorealist]] da fotograf.
 
-== Fil'mografii==
+== Fil'mografii ==
 * 1984 — [[Sanitarad-oborotenid]]
 * 1985 — [[Mecančapai (fil'm)|Mecančapai]]
 * 1987 — [[Keväz' (fil'm, 1987)|Keväz']]
@@ -23,7 +23,8 @@
 
 {{stub}}
 [[Kategorii:Venäman režissörad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Arthaus]]
