--- a/Kubrik_Stenli.mw
+++ b/Kubrik_Stenli.mw
@@ -37,7 +37,8 @@ Alemba kaik täuz'piduzližed fil'mad oma mainitadud. Kubrik oli läz kaikiden n
 [[Kategorii:Suren Britanijan režissörad]]
 [[Kategorii:AÜV:oiden prodüserad]]
 [[Kategorii:Suren Britanijan prodüserad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
