--- a/Kurosava_Akira.mw
+++ b/Kurosava_Akira.mw
@@ -30,9 +30,10 @@ Oli sündnu Tokioho, Isamu da Šima Kurosavan kanzha, oli norembaižen kahesan l
 {{stub}}
 [[Kategorii:Japonijan režissörad]]
 [[Kategorii:Japonijan prodüserad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Tokioho]]
 [[Kategorii:Kolnuded Tokios]]
