--- a/Radžinikant.mw
+++ b/Radžinikant.mw
@@ -40,8 +40,9 @@ Radžinikant kändihe tutabaks akt'oraks [[Japonii|Japonijas]] «Muthu»-fil'man
 
 [[Kategorii:Indijan akt'orad]]
 [[Kategorii:Indijan prodüserad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Akt'orad kirjamišton mödhe]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Bangalorha]]
