--- a/Spilberg_Stiven.mw
+++ b/Spilberg_Stiven.mw
@@ -37,8 +37,9 @@ Koume sizart om Spilbergal: Enn, Sjuzen i Nensi. Ezmäine ak oli Emi Irving (198
 
 [[Kategorii:AÜV:oiden režissörad]]
 [[Kategorii:AÜV:oiden prodüserad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Cincinnatihe]]
