--- a/Trier_Lars_fon.mw
+++ b/Trier_Lars_fon.mw
@@ -3,21 +3,21 @@
 | изображение = Lars Von Trier Cannes 2011.jpg
 | описание изображения = Lars fon Trier vn 2011 [[Kannoiden kinofestival'|Kannoiden festivalil]]
 }}
-'''Lars fon Trier''' ({{lang-da|Lars von Trier}}; sünd. [[30. sulaku]] [[1956. voz'|1956]], [[Kopenhagen]], [[Danii]] kuti ''Lars Trier'') om [[Danii|danijalaine]] režissör da kinotarinantegii (scenarist).
+'''Lars fon Trier''' ({{lang-da|Lars von Trier}}; sünd. [[30. sulaku]] [[1956. voz'|1956]], [[Kopenhagen]], [[Danii]] kuti ''Lars Trier'') om [[Danii|danijalaine]] fil'miden režissör da scenarist (kinotarinantegii).
 
 == Fil'mad ==
-* ''[[Epidemii (fil'm, 1987)|Epidemii]]'' (Epidemic) (1987)
-* ''[[Evrop (fil'm)|Evrop]]'' (Europa) (1991)
-* ''[[Kunigahuz (TV-serial)|Kunigahuz]]'' (Riget) (1994)
-* ''[[Kunigahuz (TV-serial)|Kunigahuz]]'' (Riget II) (1996)
-* ''[[Muretes aldoid]]'' (Breaking the Waves) (1996)
-* ''[[Kargaidai pimeduses]]'' (Dancer in the Dark) (2000)
-* ''[[Dogvil']]'' (Dogville) (2003)
-* ''[[Viž tugedust]]'' (De fem benspænd) (2003)
-* ''[[Manderlei]]'' (Manderlay) (2005)
-* ''[[Kaikiš suremb pämez']]'' (Direktøren for det hele) (2006)
-* ''[[Antihrist (fil'm)|Antihrist]]'' (Antichrist) (2009)
-* ''[[Melanholii (fil'm, 2011)|Melanholii]]'' (Melancholia) (2011)
+* ''[[Epidemii (fil'm, 1987)|Epidemii]]'' (1987, Epidemic)
+* ''[[Evrop (fil'm)|Evrop]]'' (1991, Europa)
+* ''[[Kunigahuz (TV-serial)|Kunigahuz]]'' (1994, Riget)
+* ''[[Kunigahuz (TV-serial)|Kunigahuz]]'' (1996, Riget II)
+* ''[[Muretes aldoid]]'' (1996, Breaking the Waves)
+* ''[[Kargaidai pimeduses]]'' (2000, Dancer in the Dark)
+* ''[[Dogvil']]'' (2003, Dogville)
+* ''[[Viž tugedust]]'' (2003, De fem benspænd)
+* ''[[Manderlei]]'' (2005, Manderlay)
+* ''[[Kaikiš suremb pämez']]'' (2006, Direktøren for det hele)
+* ''[[Antihrist (fil'm)|Antihrist]]'' (2009, Antichrist)
+* ''[[Melanholii (fil'm, 2011)|Melanholii]]'' (2011, Melancholia)
 
 == Homaičendad ==
 <references/>
@@ -26,6 +26,7 @@
 
 {{stub}}
 [[Kategorii:Danijan režissörad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
