--- a/Trier_Lars_fon.mw
+++ b/Trier_Lars_fon.mw
@@ -8,9 +8,9 @@
 == Fil'mad ==
 * ''[[Epidemii (fil'm, 1987)|Epidemii]]'' (1987, Epidemic)
 * ''[[Evrop (fil'm)|Evrop]]'' (1991, Europa)
-* ''[[Kunigahuz (TV-serial)|Kunigahuz]]'' (1994, Riget)
-* ''[[Kunigahuz (TV-serial)|Kunigahuz]]'' (1996, Riget II)
+* ''[[Kunigahuz (TV-serial)|Kunigahuz]]'' (1994, Riget, TV-miniserial)
 * ''[[Muretes aldoid]]'' (1996, Breaking the Waves)
+* ''[[Kunigahuz (TV-serial)|Kunigahuz II]]'' (1997, Riget II, TV-miniserial)
 * ''[[Kargaidai pimeduses]]'' (2000, Dancer in the Dark)
 * ''[[Dogvil']]'' (2003, Dogville)
 * ''[[Viž tugedust]]'' (2003, De fem benspænd)
