--- a/Vasil'jev_Boris.mw
+++ b/Vasil'jev_Boris.mw
@@ -1,5 +1,5 @@
 {{Personalii}}
-'''Boris L'vovič Vasil'jev''' ({{lang-ru|Борис Львович Васильев}}; sünd. [[21. semendku]] [[1924]], [[Smolensk]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[11. keväz'ku]] [[2013]], [[Moskv]], [[Venäma]]) oli nevondkundaline i venämalaine prozan kirjutai da scenarist. NSTÜ:n Valdkundaližen premijan laureat (1975), sai Venälaižen Federacijan Prezidentan premijad (2000).
+'''Boris L'vovič Vasil'jev''' ({{lang-ru|Борис Львович Васильев}}; sünd. [[21. semendku]] [[1924]], [[Smolensk]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[11. keväz'ku]] [[2013]], [[Moskv]], [[Venäma]]) oli nevondkundaline i venämalaine prozan kirjutai, teatran lavastusiden i fil'miden scenarist. NSTÜ:n Valdkundaližen premijan laureat (1975), sai Venälaižen Federacijan Prezidentan premijad (2000).
 
 Kirjutajan nevondkundaližen sädamižen pätem om [[Sur' tatanmaine soda]] i ristituiden ozahuded siš da sen jäl'ghe, ned äjad romanad i starinad oma ekraniziruidud. Sädusiden ezmäine pästand tegihe «Junost'»-aiglehteses päpaloin. Romanoiden kaks' serijad [[Venä]]n istorijas oma kirjutadud da pästtud ripmatoman Venäman aigan.
 
@@ -40,8 +40,12 @@ Kirjutajan nevondkundaližen sädamižen pätem om [[Sur' tatanmaine soda]] i ri
 {{stub}}
 [[Kategorii:NSTÜ:n kirjutajad]]
 [[Kategorii:Venäman kirjutajad]]
-[[Kategorii:Kinotarinantegijad]]
+[[Kategorii:NSTÜ:n scenaristad]]
+[[Kategorii:Venäman scenaristad]]
+[[Kategorii:Kinoscenaristad]]
+[[Kategorii:Teatran lavastusiden scenaristad]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Smolenskha]]
 [[Kategorii:Kolnuded Moskvas]]
