--- a/Trier_Lars_fon.mw
+++ b/Trier_Lars_fon.mw
@@ -26,6 +26,7 @@
 
 {{stub}}
 [[Kategorii:Danijan režissörad]]
+[[Kategorii:Danijan scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Scenaristad kirjamišton mödhe]]
