--- a/Adams_Duglas.mw
+++ b/Adams_Duglas.mw
@@ -19,6 +19,7 @@ Kirjutai sädi kirjserijan Dirk Džentliš mugažo (koume romanad: 1987, 1988, 2
 {{stub}}
 [[Kategorii:Suren Britanijan kirjutajad]]
 [[Kategorii:Dramaturgad]]
+[[Kategorii:Suren Britanijan scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Scenaristad kirjamišton mödhe]]
