--- a/Balabanov_Aleksei.mw
+++ b/Balabanov_Aleksei.mw
@@ -34,6 +34,8 @@ Balabanov oli naižiš kaks' kerdad, akad — Irina, Nadežda. Kaks' poigad: Fö
 
 [[Kategorii:NSTÜ:n režissörad]]
 [[Kategorii:Venäman režissörad]]
+[[Kategorii:NSTÜ:n scenaristad]]
+[[Kategorii:Venäman scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Venäman prodüserad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
