--- a/Barto_Agnija.mw
+++ b/Barto_Agnija.mw
@@ -9,6 +9,7 @@ Kirjutajan runoiden tobj pala om sätud peniden lapsiden täht. Om kebn lugeda i
 
 {{stub}}
 [[Kategorii:NSTÜ:n runokirjutajad]]
+[[Kategorii:NSTÜ:n scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Radiovedajad]]
 [[Kategorii:Runokirjutajad kirjamišton mödhe]]
