--- a/Bergman_Ingmar.mw
+++ b/Bergman_Ingmar.mw
@@ -31,6 +31,7 @@ Režissör oli naižiš viž kerdad, ühesa last sünduihe naimiželoiš. Lapsed
 
 {{stub}}
 [[Kategorii:Ročinman režissörad]]
+[[Kategorii:Ročinman scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Ročinman kirjutajad]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
