--- a/Fellini_Federiko.mw
+++ b/Fellini_Federiko.mw
@@ -33,6 +33,7 @@ Federiko Fellini oli kaikiden alemba kirjutadud fil'miden režissöraks da scena
 
 {{stub}}
 [[Kategorii:Italijan režissörad]]
+[[Kategorii:Italijan scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Scenaristad kirjamišton mödhe]]
