--- a/Hičkok_Al'fred.mw
+++ b/Hičkok_Al'fred.mw
@@ -34,9 +34,11 @@ Vspäi 1926 oli nainu, eli Al'ma Revil'-akanke surmhasai. Üks'jäine laps' Patr
 * {{IMDb|0000033}}
 
 [[Kategorii:Suren Britanijan prodüserad]]
-[[Kategorii:Suren Britanijan režissörad]]
 [[Kategorii:AÜV:oiden prodüserad]]
+[[Kategorii:Suren Britanijan režissörad]]
 [[Kategorii:AÜV:oiden režissörad]]
+[[Kategorii:Suren Britanijan scenaristad]]
+[[Kategorii:AÜV:oiden scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
