--- a/Jufit_Jevgenii.mw
+++ b/Jufit_Jevgenii.mw
@@ -23,6 +23,7 @@
 
 {{stub}}
 [[Kategorii:Venäman režissörad]]
+[[Kategorii:Venäman scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Scenaristad kirjamišton mödhe]]
