--- a/Kubrik_Stenli.mw
+++ b/Kubrik_Stenli.mw
@@ -37,6 +37,8 @@ Alemba kaik täuz'piduzližed fil'mad oma mainitadud. Kubrik oli läz kaikiden n
 [[Kategorii:Suren Britanijan režissörad]]
 [[Kategorii:AÜV:oiden prodüserad]]
 [[Kategorii:Suren Britanijan prodüserad]]
+[[Kategorii:AÜV:oiden scenaristad]]
+[[Kategorii:Suren Britanijan scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
