--- a/Kurosava_Akira.mw
+++ b/Kurosava_Akira.mw
@@ -30,6 +30,7 @@ Oli sündnu Tokioho, Isamu da Šima Kurosavan kanzha, oli norembaižen kahesan l
 {{stub}}
 [[Kategorii:Japonijan režissörad]]
 [[Kategorii:Japonijan prodüserad]]
+[[Kategorii:Japonijan scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
