--- a/Spilberg_Stiven.mw
+++ b/Spilberg_Stiven.mw
@@ -37,6 +37,7 @@ Koume sizart om Spilbergal: Enn, Sjuzen i Nensi. Ezmäine ak oli Emi Irving (198
 
 [[Kategorii:AÜV:oiden režissörad]]
 [[Kategorii:AÜV:oiden prodüserad]]
+[[Kategorii:AÜV:oiden scenaristad]]
 [[Kategorii:Kinoscenaristad]]
 [[Kategorii:Prodüserad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
