--- a/Lesosibirsk.mw
+++ b/Lesosibirsk.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Lesosibirsk<br />Лесосибирск
  | Lidnanznam = Coat of Arms of Lesosibirsk (Krasnoyarsk krai).png
- | Flag = 
+ | Flag = Flag of Lesosibirsk.png
  | Lidnanznam text = Lesosibirskan lidnanznam
- | Flag text = 
+ | Flag text = Lesosibirskan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 59 642
  | Voz' = 2017
  | Pind = 
- | Fail = Krestovozdvigenskiy hram Lesosibirsk.JPG
+ | Fail = 4Y1A9115 (29324156381).jpg
  | Pämez' = Andrei Hohräkov<br />(semendku 2010—)
  | Telefonkod = +7-39145-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -19,7 +19,7 @@
 == Istorii ==
 Ezmäine eländpunkt mainitase vl 1640 kuti ''Maklakov Lug-külä'' ({{lang-ru|деревня Маклаков Луг}}). 20. voz'sadan augotišel norvegine Jonas Lid-edheotai sauvoi [[mec]]an ümbriradajad kombinatad läz Maklakovod. Nevondkundaližen aigan saudihe kaks' mecanümbriradajad kombinatad da mecan varhapanendan järedad bazad samha materialoid angarižes [[pedai|pedajaspäi]]. Ühtenzoitihe Maklakovo- i Novomaklakovo-žiloid da anttihe lidnan statusad vl 1975 nügüdläiženke nimenke. Vl 1989 mülütihe Novojeniseisk-žilod lidnha.
 
-Mectegimišton täuz' cikl om lidnas: mecan varhapanend i sauvondmaterialiden pästand (pilindmaterialad, fibroplitad), mechimijan kombinat, meblin tehmine. Vspäi 2011 uz' mecanpilindkompleks om sauvomas moderniziruimha tehmištod.
+Mectegimišton täuz' cikl om Lesosibirskas: mecan varhapanend i sauvondmaterialiden pästand (pilindmaterialad, fibroplitad), mechimijan kombinat, meblin tehmine. Vspäi 2011 uz' mecanpilindkompleks om sauvomas moderniziruimha tehmištod.
 
 == Geografijan andmused ==
 Lidn sijadase pidust' [[Jenisei]]n hurad randad 12-kilometrižel keskustal, 30 kilometras sen ühthejoksmusespäi [[Angar (jogi)|Angaranjogenke]] mödvedhe, 80 m ü.m.t. valdmeren pindan päl. Matkad [[Krasnojarsk]]hasai om 245 km suvhe vai 295 km avtotedme. Lähembaine lidn om [[Jeniseisk]] 30 km lodeheze orhal, 40 km avtotedme vai Jenisei-jogedme. Lesosibirsk-I-, I-kormaduzstancii i II-raudtestancijad oma [[Ačinsk]]an sarakon lopuikš 260 km pitte.
@@ -27,11 +27,20 @@ Lidn sijadase pidust' [[Jenisei]]n hurad randad 12-kilometrižel keskustal, 30 k
 Lidnanvuitte Strelk-žilo (4 792 rist. vl 2017) da pen' Ust'-Angarsk-žilo (52 rist. vl 2016) mülüdas lidnümbrikho Lesosibirskan ližaks. Lidnümbrikon pind — 270,83 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 61 139 ristitud, lidnümbrikon — 66 240 ristitud. Kaikiš suremb lidnan ristitišt oli vozil 1989−2001, 68..69 tuhad eläjid (vl 1992 — 69 900 rist.). Vl 2017 kaik 64 477 ristitud elihe lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 61 139 ristitud, lidnümbrikon — 66 240 ristitud. Kaikiš suremb lidnan ristitišt oli 68..69 tuhad eläjid vozil 1989−2001 (69 900 rist. vl 1992). Vl 2017 kaik 64 477 ristitud elihe lidnümbrikos.
 
-Ortodoksižen hristanuskondan Ristan Zdviženjan päjumalanpert' (1995−2002), vižkümnenden päivän uskojiden loičendpert' i islaman pühäpert' (1997) oma olmas lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Ristan Zdviženjan päjumalanpert' (1995−2002) i ph. Ondrii Ezikuctud päjumalanpert' (om saudud vll 2007−2012), [[vižkümnenden päivän jumalankodikund|vižkümnenden päivän uskojiden]] loičendpert' i [[islam]]an «Iman»-pühäpert' (1997) oma olmas lidnas.
 
 Professionaližen opendusen aluzkundad: tehnologine i medicinine tehnikumad, mecanümbriradajan tegimišton kolledž, üläopendusen aluzkundoiden koume filialad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Лесосибирск. Крестовоздвиженский собор.jpg|Ristan Zdviženjan päjumalanpert', vn 2012 nägu
+Православный храм св.Андрея Первозванного.jpg|Ph. Ondrii Ezikuctud päjumalanpert', vn 2011 nägu
+29331458.jpg|Mec vuigonkan jäl'ghe Novojeniseiskan mechimižel kompleksal vl 2006
+Lpisfu 002.JPG|Lesosibirskan pedagogine institut — Sibirin federaližen universitetan filial (2012. voz' vai sen aigemba)
+Lesosibirsk-vokzal.jpg|Lesosibirsk-päraudtestancijan sauvuz vl 2008
+</gallery>
 
 == Irdkosketused ==
 * [http://www.lesosibirsk.krskstate.ru/ Lidnümbrikon tobmuden aluzkundoiden sait (''lesosibirsk.krskstate.ru'') Krasnojarskan randan oficialižel portalal.] {{ref-ru}}
