--- a/Petri_Julius_Rihard.mw
+++ b/Petri_Julius_Rihard.mw
@@ -1,5 +1,5 @@
 {{Personalii}}
-'''Julius Rihard Petri''' ({{lang-de|Julius Richard Petri}}; sünd. [[31. semendku]] [[1852]], [[Vuppertal'|Barmen]] (nüg. Vuppertalin pala), [[Prussii]] — kol. [[20. tal'vku]] [[1921]], [[Caic]], [[Saksanma]]) oli saksalaine [[mikrobiologii|mikrobiolog]]. Tedoradoiden riven tegii.
+'''Julius Rihard Petri''' ({{lang-de|Julius Richard Petri}}; sünd. [[31. semendku]] [[1852]], [[Vuppertal'|Barmen]] (nüg. Vuppertalin pala), [[Prussii]] — kol. [[20. tal'vku]] [[1921]], [[Caic]], [[Saksanma]]) oli saksalaine [[mikrobiologii|mikrobiolog]]. Tedoradoiden riven tegii, pästi kahesa tedotöd vai sen enamba vll 1876−1897.
 
 == Biografii ==
 Vll 1871−1875 mez' openui kunigazližes medicinižes sodaakademijas. Opendusen sandan jäl'ghe lekaroiči Berlinan Šarite-klinikas. Vl 1876 Petri kändihe doktoranturan pästnikaks i jätksi radod sodalekarikš, sai medicinižen radnikoičendan majoran arvod lopuks.
