--- a/Petri_Julius_Rihard.mw
+++ b/Petri_Julius_Rihard.mw
@@ -1,4 +1,7 @@
-{{Personalii}}
+{{Personalii
+| изображение = Julius Richard Petri.jpg
+| описание изображения = Julius Rihard Petri fotokuval, läz 1888. vot
+}}
 '''Julius Rihard Petri''' ({{lang-de|Julius Richard Petri}}; sünd. [[31. semendku]] [[1852]], [[Vuppertal'|Barmen]] (nüg. Vuppertalin pala), [[Prussii]] — kol. [[20. tal'vku]] [[1921]], [[Caic]], [[Saksanma]]) oli saksalaine [[mikrobiologii|mikrobiolog]]. Tedoradoiden riven tegii, pästi kahesa tedotöd vai sen enamba vll 1876−1897.
 
 == Biografii ==
