--- a/Microsoft_Windows.mw
+++ b/Microsoft_Windows.mw
@@ -1,10 +1,12 @@
 {{10000}}{{A10000}}
 [[Fail:Windows darkblue 2012.svg|thumb|right|250px|Sisteman logotip vl 2012]]
-'''Microsoft Windows''' («[[ikun|iknad]]» anglijan kelespäi) om [[kompjuter]]ižiden kommertižiden [[operacine sistem|operaciisistemiden]] heimkund sauptud lähtmižkodanke. Kävutai ohjandab kompjuteral grafižen interfeisan abul. Ezmäine Windows-versii om pästtud vn 1985 20. päiväl kül'mkud. Nügüd'aigan (eloku 2020) sisteman jäl'gmäižed versijad oma 10-nomeranke.
+'''Microsoft Windows''' («[[ikun|iknad]]» anglijan kelespäi) om [[kompjuter]]ižiden kommertižiden [[operacine sistem|operaciisistemiden]] heimkund sauptud lähtmižkodanke. Kävutai ohjandab kompjuteral grafižen interfeisan abul. Ezmäine Windows-versii om pästtud vn 1985 20. päiväl kül'mkud. Operaciisisteman jäl'gmäižed versijad oma 11-nomeranke, pästtas niid vn 2021 redukun 5. päiväspäi testvariantoiš.
 
 Eziauguižešti Windows oli operacižen [[MS-DOS]]-sisteman ližasauvondaks. Eriline sistem 1990-nziden voziden lopuspäi.
 
 Windows-sistemad radoiba kahesas personaližes kompjuteras ühesaspäi vn 2014 elokus ''Net Applications''-resursan andmusiden mödhe.
+
+Personaližen kompjuteran Windows-sisteman nimed (tehmižen järgenduses): 1, 2, 3, 95, 98, XP, Vista, 7, 8, 10, 11. [[Internet Explorer]]-kaclim oli komplektas versijoiš 3..8.
 
 == Homaičendad ==
 <references />
