*Empty MediaWiki Message*

--- a/Microsoft_Windows.mw
+++ b/Microsoft_Windows.mw
@@ -6,7 +6,7 @@ Eziauguižešti Windows oli operacižen [[MS-DOS]]-sisteman ližasauvondaks. Eri
 
 Windows-sistemad radoiba kahesas personaližes kompjuteras ühesaspäi vn 2014 elokus ''Net Applications''-resursan andmusiden mödhe.
 
-Personaližen kompjuteran Windows-sisteman nimed (tehmižen järgenduses): 1, 2, 3, 95, 98, XP, Vista, 7, 8, 10, 11. [[Internet Explorer]]-kaclim oli komplektas versijoiš 3..8.
+Personaližen kompjuteran Windows-sisteman nimed (tehmižen järgenduses): 1, 2, 3, 95, 98, 2000, XP, XP Professional, Vista, 7, 8, 10, 11. [[Internet Explorer]]-kaclim oli komplektas versijoiš 3.1−8.
 
 == Homaičendad ==
 <references />
