*Empty MediaWiki Message*

--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Eger
  | Lidnanznam = HUN Eger COA.jpg
- | Flag = 
+ | Flag = Flag of Eger.svg
  | Lidnanznam text = Egeran lidnanznam
  | Flag text = 
  | Valdkund = Mad'jaranma
