--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -3,35 +3,42 @@
  | Lidnanznam = HUN Eger COA.jpg
  | Flag = Flag of Eger.svg
  | Lidnanznam text = Egeran lidnanznam
- | Flag text = 
+ | Flag text = Egeran flag
  | Valdkund = Mad'jaranma
- | Eläjiden lugu = 53,436
- | Voz' = 2018-01-01
+ | Eläjiden lugu = 51,168
+ | Voz' = 2021-01-01
  | Pind = 92.24
  | Fail = Eger-latkep-vzs.jpg
- | Pämez' = Laslo Habiš<br/>(2006—)
+ | Pämez' = Adam Mirkocki<br/>(reduku 2019—,<br />''Mirkóczki Ádám'')
  | Telefonkod = +36-36
  | Aigvö = tal'vel [[UTC]]+1.<br />kezal [[UTC]]+2
 }}
-'''Eger''' ({{lang-hu|Eger}} [ˈɛɡɛr], {{lang-de|Erlau}}, {{lang-sk|Jáger}}, {{lang-la|Agria}}, {{lang-tr|Eğri}}, {{lang-pl|Jagier}}, {{lang-cs|Jager}}, {{lang-sr|Јегра / Jegra}}) om lidn [[Mad'jaranma]]n pohjoižpäivnouzmas. Se om [[Heveš (agj)|Heveš-agjan]] administrativine keskuz.
+'''Eger''' (mugažo [[mad'jaran kel'|mad'jaraks]], virktas [ˈɛɡɛr], {{lang-de|Erlau}}, {{lang-sk|Jáger}}, {{lang-la|Agria}}, {{lang-tr|Eğri}}, {{lang-pl|Jagier}}, {{lang-cs|Jager}}, {{lang-sr|Јегра / Jegra}}) om lidn [[Mad'jaranma]]n pohjoižpäivnouzmas. Se om [[Heveš (agj)|Heveš-agjan]] administrativine keskuz.
 
-Lidn sijadase 165 m ü.m.t. keskmäižel korktusel.
+Eländpunkt Egeran sijas oli pandud amuižen aigan, kändihe [[mad'jaralaižed|mad'jaralaižiden]] lidnaks 10. voz'sadal.
 
-Vl 2011 eläjiden lugu oli 56 530 ristitud.
+Lidn sijadase 165 m ü.m.t. keskmäižel korktusel. Matkad [[Budapešt]]-pälidnaspäi om 130 km pohjoižpäivnouzmha.
+
+== Eläjad ==
+Vl 2011 eläjiden lugu oli 56 530 ristitud. Heiden tobj pala om [[katoline jumalankodikund|katolikad]]. Kaikiš suremb lidnan ristitišt oli 61 576 eläjad vl 1990.
+
+Edeline lidnan pämez' om Laslo Habiš (2006−2019, ''Habis László'').
 
 == Sebruzlidnad ==
-* {{SVK|#}} [[Dol'ni Kubin]], [[Slovakii]]
-* {{RUS|#}} [[Čeboksarad]], [[Venäma]]
-* {{GER|#}} [[Esslingen Nekkaral]], [[Saksanma]]
-* {{USA|#}} [[Geinsvill (Džordžii)]], [[AÜV]]
-* {{ROU|#}} [[Georgeni]], [[Romanii]]
-* [[Fail:Flag of Palestine.svg|border|23px]] [[Jerihon]], [[Palestin]]
-* {{CZE|#}} [[Kutna Hor]], [[Čehanma]]
-* {{FRA|#}} [[Makon]], [[Francii]]
-* {{TUR|#}} [[Pamukkale]], [[Turkanma]]
-* {{FIN|#}} [[Pori]], [[Suomenma]]
-* {{POL|#}} [[Pšemisl']], [[Pol'šanma]]
-* {{ITA|#}} [[Sarcan]], [[Italii]]
+* {{SVK|#}} [[Dol'ni Kubin]], [[Slovakii]] (vspäi 2006)
+* {{RUS|#}} [[Čeboksarad]], [[Venäma]] (2004)
+* {{GER|#}} [[Esslingen Nekkaral]], [[Saksanma]] (1991)
+* {{ROU|#}} [[Georgeni]], [[Romanii]] (1993)
+* [[Fail:Flag of Palestine.svg|border|23px]] [[Jerihon]], [[Palestin]] (2013)
+* {{CZE|#}} [[Kutna Hor]], [[Čehanma]] (2001)
+* {{FRA|#}} [[Makon]], [[Francii]] (1985)
+* {{UKR|#}} [[Mukačevo]], [[Ukrain]] (2010)
+* {{FIN|#}} [[Pori]], [[Suomenma]] (1973)
+* {{POL|#}} [[Pšemisl']], [[Pol'šanma]] (2003)
+* {{ITA|#}} [[Sarcan]], [[Italii]] (1990)
+
+;Partnörlidn
+* {{HUN|#}} [[Sekešfehervar]], [[Mad'jaranma]] (vspäi 2016)
 
 == Irdkosketused ==
 * [http://www.eger.hu/ Lidnan oficialine sait (''eger.hu'').] {{ref-hu}}
