--- a/Sekešfehervar.mw
+++ b/Sekešfehervar.mw
@@ -48,6 +48,7 @@ Rahvahad (vl 2001): [[mad'jaralaižed]] — 95,7%, [[saksalaižed]] — 0,8%, [[
 |}
 
 ;Lidnad-partnörad
+* {{HUN|#}} [[Eger (lidn)|Eger]], [[Mad'jaranma]] (vspäi 2016)
 * {{MNG|#}} [[Erdenet]], [[Mongolii]] (2008)
 * {{TUR|#}} [[Izmit]], [[Turkanma]] (2008)
 
