--- a/Noril'sk.mw
+++ b/Noril'sk.mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Noril'skan lidnanznam
  | Flag text = Noril'skan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 178,018
- | Voz' = 2017
+ | Eläjiden lugu = 181,830
+ | Voz' = 2020
  | Pind = 23.16
- | Fail = Площадь памяти Героев. Вид на четную сторону улицы..JPG
+ | Fail = Norilsk 2019.jpg
  | Pämez' = Rinat Ahmetčin<br />(sügüz'ku 2017—)
  | Telefonkod = +7-3919-xxx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -35,6 +35,20 @@ Koume lidnrajonad, niiden ümbrišt da pen' lidnanvuitte Snežnogorsk-žilo (887
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnümbrikon eläjiden lugu oli 175 365 ristitud. Kaikiš suremb lidnümbrikon ristitišt oli vl 2006 — 213 200 ristitud, Noril'sk-lidnan edel lidnümbrikod — vl 1985, oli 185 tuhad eläjid. Specialižen opendusen aluzkundad oma industrialine institut, medicinine škol, pedagogine kolledž, servisan da tehnologijoiden professionaline licei.
 
 Avtobusad, maršruttaksid da taksid oma kundaližtransportaks lidnas. Päraudtestancii om saudud vozil 1951−1953, om sauptud vspäi 1998, tühjitihe ezilidnelektrojonusid. Raudte ühtenzoitab [[Talnah]]-rajonanke da [[Dudink]]-meriportanke, vspäi 1998 om ajamha jüguid vaiše. Tatanmaine soda- da civiline ''Noril'sk (Alikel')''-lendimport (''NSK / НАК'') sijadase 52 km päivlaskmha lidnan keskusespäi, tehtas reisid matkadajiden täht Venäman surihe lidnoihe da Taimiradme, mugažo jügureisid.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Площадь памяти Героев. Вид на четную сторону улицы..JPG|Vägimehiden mušton torg (2015)
+Летний Норильск.jpg|Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2016 nägu tagamal
+Norilskmosque.jpg|«Nurd Kamal'»-pühäpert' (islam), vn 2009 nägu
+Norilsk Nickel.jpg|«[[Noril'skii nikel']]»-kompanijan Polärantagaižen filialan administrativine sauvuz Gvardeiskai-torgul vl 2016
+Рудник "Октябрьский" - panoramio.jpg|«Oktäbr'skii»-kaivuz Talnah-rajonanno vl 2014
+Норильский Заполярный театр драмы им. Вл. Маяковского.jpg|Noril'skan Polärantagaine dramteatr V. Majakovskijan nimed (2014)
+Городская больница №1 Г. Норильск.jpg|Lidnan läžundkodi nomer 1 (2012)
+Ldskayerkan.jpg|Sportan jäpert'kulu Kajerkan-rajonas (2010)
+Norilskbus.jpg|Avtobusstancii vl 2006
+Norilsk 7.jpg|Noril'sk (Alikel')-lendimportan terminal vl 2013
+</gallery>
 
 == Irdkosketused ==
 * [http://www.norilsk-city.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''norilsk-city.ru'').] {{ref-ru}}
