*Empty MediaWiki Message*

--- a/Noril'sk.mw
+++ b/Noril'sk.mw
@@ -38,9 +38,9 @@ Avtobusad, maršruttaksid da taksid oma kundaližtransportaks lidnas. Päraudtes
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Площадь памяти Героев. Вид на четную сторону улицы..JPG|Vägimehiden mušton torg (2015)
+Площадь памяти Героев. Вид на четную сторону улицы..JPG|Vägimehiden mušton avoinird (2015)
 Летний Норильск.jpg|Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2016 nägu tagamal
-Norilskmosque.jpg|«Nurd Kamal'»-pühäpert' (islam), vn 2009 nägu
+Norilskmosque.jpg|«Nurd Kamal'»-pühäpert'<br />(islam), vn 2009 nägu
 Norilsk Nickel.jpg|«[[Noril'skii nikel']]»-kompanijan Polärantagaižen filialan administrativine sauvuz Gvardeiskai-torgul vl 2016
 Рудник "Октябрьский" - panoramio.jpg|«Oktäbr'skii»-kaivuz Talnah-rajonanno vl 2014
 Норильский Заполярный театр драмы им. Вл. Маяковского.jpg|Noril'skan Polärantagaine dramteatr V. Majakovskijan nimed (2014)
