--- a/Markov_Oleg.mw
+++ b/Markov_Oleg.mw
@@ -2,7 +2,9 @@
 | изображение = Олег Марков.jpg
 | описание изображения = Oleg Markov Venäman prezidentan abunikaks vozil 2008-2012
 }}
-'''Oleg Aleksandrovič Markov''' ({{lang-ru|Олег Александрович Марков}}; sünd. [[30. tal'vku]] [[1953]], [[Suvisahalinsk]], [[Sahalinan agj]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venämalaine]] valdkundmez', nügüdläine [[Piter]]in vice-gubernator (vs 2012 kezakun 20. päiväspäi).
+'''Oleg Aleksandrovič Markov''' ({{lang-ru|Олег Александрович Марков}}; sünd. [[30. tal'vku]] [[1953]], [[Suvisahalinsk]], [[Sahalinan agj]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venämalaine]] valdkundmez', nügüdläine [[Piter]]in varagubernator (vs 2012 kezakun 20. päiväspäi).
+
+Politikanmez' om [[Piterin valdkundaline universitet|Leningradan valdkundaližen universitetan Ždanovan nimed]] pästnikan, openui sen juridižes fakul'tetas. Radoi Leningradan radonoigendajan tobmuden aluzkundoiš. Vll 2008−2012 Markov oli [[Venälaižen Federacijan Prezident]]an abunikan.
 
 == Homaičendad ==
 <references/>
