*Empty MediaWiki Message*

--- a/Markov_Oleg.mw
+++ b/Markov_Oleg.mw
@@ -1,6 +1,6 @@
 {{Personalii
 | изображение = Олег Марков.jpg
-| описание изображения = Oleg Markov Venäman prezidentan abunikaks vozil 2008-2012
+| описание изображения = Oleg Markov Venäman prezidentan abunikaks vozil 2008−2012
 }}
 '''Oleg Aleksandrovič Markov''' ({{lang-ru|Олег Александрович Марков}}; sünd. [[30. tal'vku]] [[1953]], [[Suvisahalinsk]], [[Sahalinan agj]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venämalaine]] valdkundmez', nügüdläine [[Piter]]in varagubernator (vs 2012 kezakun 20. päiväspäi).
 
