--- a/Ragiž.mw
+++ b/Ragiž.mw
@@ -1,8 +1,12 @@
 {{10000}}{{A10000}}
 [[Fail:Hailstorm in San Jose, California (13153912).jpg|thumb|right|250px|Ragiž [[San Hose]]s, AÜV]]
-'''Ragiž''' om [[atmosferižed sadeged|atmosferižiden sadegiden]] toižend. Se kogoneb tobjimalaz kehkran forman läbinägujiš [[jä]]henegišpäi.
+'''Ragiž''' om [[atmosferižed sadeged|atmosferižiden sadegiden]] toižend. Se kogoneb kehkran forman šoidukahiš läbinägujiš [[jä]]henegišpäi tobjimalaz, no oleskeleb erazvuiččen väran-ki forman, lumisüdäitukunke.
 
-Paneb ragišt lämän voz'aigan päiväl päpaloin, suriš pimedoiš kogopil'višpäi, [[valeg]]enke i [[jumalansä]]n aigan. Pandud raghen šoid voib sadas severziš-se santimetrihesai. Raghen hätkeližuz oleleb 5..10 minutad paksumb kaiked, čashusai lujas harvoin.
+Paneb ragišt lämän voz'aigan päiväl päpaloin, suriš korktoiš pimedoiš kogopil'višpäi, [[valeg]]enke i [[jumalansä]]n aigan. Pandud raghen šoid voib sadas severzihe-se santimetrihesai. Raghen hätkeližuz oleleb 5..10 minutad paksumb kaiked, čashusai lujas harvoin.
+
+Raghen paloiden suruz oleleb 1..100 mm da sen enamba, henomb om [[lumisurin]]. Erasti paneb toižid kaluid raghenke, oz., pähkmid. Raghen palaižed sädas pil'ven kül'mdud statjaližešti vezitippuiš ümbri. Lanktenuden raghen lämuz om 0 C° paksus, oleleb −13 Cel'sijan gradushasai. Il'man ülenijad valud oma tarbhaižed raghen sädamižen täht.
+
+Raghen panend om harv näguz polärižiš i tropižiš maiš (tropikoiš paneb mägitahondoile), mugažo meren päl. Paneb ragišt venon vönen levedusiš paksumba kaiked, i nägusen paksuz rippub edhudespäi mererandalpäi, lähemb ka paksumb.
 
 {{Commons|Category:Hail}}
 
